merge zips without repacking