@@ -1,5 +1,4 @@
 plugins {
-    application
     kotlin("jvm") version "2.0.0"
 }
 
@@ -12,13 +11,18 @@ kotlin {
 }
 
 dependencies {
-    implementation(kotlin("stdlib-jdk8"))
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0-RC")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0")
 }
 
-application {
-    mainClass = "parallelZip.MainKotlin"
-    applicationDefaultJvmArgs = listOf("--add-opens=java.base/java.util.zip=ALL-UNNAMED")
+task("fatJar", Jar::class) {
+    group = project.name
+    archiveBaseName = project.name
+    manifest.attributes["Manifest-Version"] = "1.0"
+    manifest.attributes["Main-Class"] = "parallelZip.MainJava"
+    manifest.attributes["Add-Opens"] = "java.base/java.util.zip java.base/java.io"
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from(configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) })
+    with(tasks.jar.get())
 }
 
 task<JavaExec>("runJava") {
@@ -34,7 +38,11 @@ task<JavaExec>("runSequential") {
 }
 
 fun JavaExec.configure(name: String) {
+    group = project.name
     mainClass = "parallelZip.$name"
     classpath = sourceSets["main"].runtimeClasspath
-    jvmArguments = listOf("--add-opens=java.base/java.util.zip=ALL-UNNAMED")
+    jvmArguments = listOf(
+        "--add-opens=java.base/java.util.zip=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED"
+    )
 }
